# v0.1

./: .env.example  .gitignore  ENGINEERING_ONBOARDING.md  Makefile  README.md  claude.md  cli.py  main.py  overview.md  pyproject.toml  real_response.txt  runtime_outline.md  server.py  sre_outline.md  stubs.py
.github/workflows/: ci.yml
agents/: base.py
aggregation/: aggregator.py
assets/: alpha_overview_flowchart.drawio
core/: executor.py  memory.py  registry.py  runtime.py
display/: live.py
e2e/: test_api.py  test_components.py  test_llm.py  test_schemas.py  test_sentry.py  test_signals.py  test_smoke.py  test_synthesis_agent.py
fixtures/: incident_b.json
frontend/: index.html
frontend/static/: app.js  style.css
judge/: judge.py
learnings/: agent_registry.md  demo_script_refined.md  design_decisions.md  frontend_api_contract.md  frontend_integration.md  judge_layer.md  local_demo_runbook.md  parallel_executor.md  phase4_remaining.md  sentry_integration_architecture.md  structured_memory.md
llm/: __init__.py  base.py  cerebras.py  openrouter.py
schemas/: events.py  hypothesis.py  incident.py  result.py  signal.py
scripts/: demo_webhook.py
signals/: __init__.py  commit_analyzer.py  config_analyzer.py  log_analyzer.py  metrics_analyzer.py  signal_extractor.py
sre/agents/: __init__.py  commit_agent.py  config_agent.py  log_agent.py  metrics_agent.py  synthesis_agent.py
sre/integrations/: sentry.py
sre/prompts/: commit_agent.txt  config_agent.txt  (+3 more)
tasks/: phase_0.md  phase_1.md  phase_2.md  phase_3.md  phase_4.md
utils/: parse.py
